Fixed z-index of top of the page menu so that full record page thumbnails won't cover it up

--- a/access/src/main/external/static/css/cdrui_styles.css
+++ b/access/src/main/external/static/css/cdrui_styles.css
@@ -196,6 +196,7 @@ ul.submenu {
 	border-left: 1px solid #fff;
 	border-right: 1px solid #fff;
 	margin-left: -1px;
+	z-index: 1;
 }
 
 ul#mainmenu ul.submenu li {
